<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ScrollingActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnJoin"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/button_promo"
        android:text="@string/join_now"
        android:textColor="@color/white"
        android:textSize="17sp">
    </androidx.appcompat.widget.AppCompatButton>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:theme="@style/myToolbar"
        app:itemIconTint="@drawable/tabs_color"
        app:itemTextColor="#6E6E6E"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.TopBarEx.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar_const_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="20dp">

                <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/it_s_a_great_day_for_coffee"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="13dp"
                    android:background="@color/white"
                    android:paddingBottom="12dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    app:elevation="0dp"
                    app:icon="@drawable/icons8_login_24"
                    app:iconSize="17dp"
                    app:iconTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeWidth="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnInbox"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="13dp"
                    android:background="@color/white"
                    android:paddingBottom="11dp"
                    android:text="@string/inbox"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    app:elevation="0dp"
                    app:icon="@drawable/icons8_secured_letter_64"
                    app:iconSize="23dp"
                    app:iconTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnSignIn"
                    app:strokeWidth="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnProfile"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="13dp"
                    android:background="@color/white"
                    android:paddingBottom="11dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    app:elevation="0dp"
                    app:icon="@drawable/icons8_male_user_50"
                    app:iconSize="23dp"
                    app:iconTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:strokeWidth="0dp" />

                <View
                    android:id="@+id/border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="25dp"
                    android:background="#A3A3A3"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar_const_layout"
                    app:layout_constraintStart_toStartOf="parent">
                </View>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.TopBarEx.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRewards"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12sp"
                android:text="@string/starbucks_rewards"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="6sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="6sp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRewards"
                tools:listitem="@layout/cell" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnJoinNow"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/my_button"
                android:text="@string/title_join_now"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvImages" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNews1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnJoinNow">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/tvContent"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="top|center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/coffeemock"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitleOfPromo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/earn_sips"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvContent" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/promo_description"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleOfPromo" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnJoinNowCardView"
                        android:layout_width="110dp"
                        android:layout_height="29dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/button_promo"
                        android:text="@string/get_started"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNews2"
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvNews1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/tvContent2"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="top|center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/coffeemock"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTitleOfPromo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/a_million_yays_for_star_days"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvContent2" />

                    <TextView
                        android:id="@+id/tvDescription2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/promo2_description"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitleOfPromo2" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnJoinNowCardView2"
                        android:layout_width="200dp"
                        android:layout_height="29dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/button_promo"
                        android:text="@string/join_starbucks_rewards"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDescription2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>